# fastapi-module

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-build.yml  python-test.yml
fastapi_alt_controller/: controller.py
fastapi_module/: __init__.py  class_dep.py  controller.py  enhanced_cbd.py  inferring_router.py  module.py  types.py  utils.py
tests/: test_controller.py  test_enhanced_cbd.py  test_inferring_router.py  test_module.py
