[tool.poetry]
name = "fastapi-module"
description = "FastAPI module utilities"
version = "0.2.0"
authors = ["Lương Quang Mạnh <luongquangmanh85@gmail.com>"]
license = "MIT"
homepage = "https://github.com/lqmanh/fastapi-module"
repository = "https://github.com/lqmanh/fastapi-module"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.65.0"
pydantic = ">=1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
mypy = "^0.910"
black = "^21.6b0"
requests = "^2.25.1"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
